== 0.17.0

* Enhancements
  * Sticky filters now combines duplicate tags
  * Minor graphical tag changes on calendar
  * Stickies can now have a due time and duration

* Bug Fix
  * Email setting checkboxes for project notifications are no longer incorrectly disabled

== 0.16.2

* Bug Fix
  * Removed "assigned to me" option for sticky list page as it was redundant
  * "Assigned to Me" now correctly saves user settings on calendar

== 0.16.1

* Bug Fix
  * Stickies on calendar view are now correctly grouped by tags

== 0.16.0

* Enhancements
  * Calendar improvements:
    * Saves checked 'completed' or 'not completed' filters on calendar
    * Displays stickies in the following or preceding month
    * Can filter stickies assigned to the user
  * Project selection dropdowns are now sorted by favorites first
  * Stickies search now allows users to filter unnassigned stickies
  * Email settings page now prompts user if the user navigates away without saving updated settings
  * Tagging improvements:
    * Sticky list page can now filter stickies which contain at least one, or all selected tags
    * Tags can now be given an additional color and description
    * Sticky list page tag filters now only shows tags for the selected project

* Bug Fix
  * Generating a template from the calendar view now correctly updates the selected templates available project frames
  * Daily Stickies Due email no longer includes stickies from projects that have email delivery off

* Refactoring
  * Updated to Rails 3.2.1 and fixed Devise 2.0.0 locales file

== 0.15.3

* Refactoring
  * Removed initializer fix for Rack that is now handled by Contour

== 0.15.2

* Refactoring
  * Gem dependencies updated:
    * Rails 3.2.0
    * Contour ~> 0.9.3
  * Devise migration and configuration file updated
  * Notes RSS feed has moved to Task Tracker
  * Environment files updated to be in sync with Rails 3.2.0

== 0.15.1

* Bug Fix