@@ -188,3 +188,19 @@ only_beta:
   deleted: false
   owner: valid
   tags: beta
+
+due_at_ics:
+  user: valid
+  project: one
+  # frame:
+  completed: false
+  description: With Due Date and ICS attachment
+  due_date: 2012-02-06
+  due_at: 09:00:00 AM
+  duration: 45
+  duration_units: minutes
+  start_date: 2012-02-06
+  # end_date:
+  deleted: false
+  owner: valid
+  tags: one
